--- a/catalog.html
+++ b/catalog.html
@@ -38,9 +38,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link button button-primary nav-button" href="#">
-                <span class="visually-hidden">Хочу сюда</span>
-              </a>
+              <a class="navigation-link button button-primary nav-button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -99,15 +97,12 @@
               <legend class="form-filter-title">Стоимость, ₽:</legend>
               <label class="form-filter-control">
                 <span class="form-filter-control-text">От</span>
-                <input class="form-filter-range-input" type="number" id="min-cost" name="min-cost" min="0" max="12000" step="1" value="0" />
+                <input class="form-filter-input" type="number" id="min-cost" name="min-cost" min="0" max="12000" step="1" value="0" />
               </label>
               <label class="form-filter-control">
                 <span class="form-filter-control-text">До</span>
-                <input class="form-filter-range-input" type="number" id="max-cost" name="max-cost" min="0" max="12000" step="1" value="9000" />
+                <input class="form-filter-input" type="number" id="max-cost" name="max-cost" min="0" max="12000" step="1" value="9000" />
               </label>
-              <div class="form-filter-range-wrapper">
-                <input class="form-filter-range-input" type="range" id="range-input" name="range-input" min="0" max="12000" step="1" value="9000" />
-              </div>
             </fieldset>
             <div class="form-filter-buttons">
               <button class="button filter-button-apply" type="submit">Применить</button>
@@ -124,17 +119,17 @@
           </select>
           <ul class="catalog-view-list">
             <li class="view-item">
-              <a class="button button-tile btn-view-active" href="catalog.html?view=tile">
+              <a class="view-button button-tile btn-view-active" href="catalog.html?view=tile">
                 <span class="visually-hidden">Показать плиткой</span>
               </a>
             </li>
             <li class="view-item">
-              <a class="button button-card" href="catalog.html?view=card">
+              <a class="view-button button-card" href="catalog.html?view=card">
                 <span class="visually-hidden">Показать карточкой</span>
               </a>
             </li>
             <li class="view-item">
-              <a class="button button-list" href="catalog.html?view=list">
+              <a class="view-button button-list" href="catalog.html?view=list">
                 <span class="visually-hidden">Показать списком</span>
               </a>
             </li>
