--- a/index.html
+++ b/index.html
@@ -38,19 +38,16 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link button button-primary nav-button" href="#">
-                <span class="visually-hidden">Хочу сюда</span>
-              </a>
+              <a class="navigation-link button button-primary nav-button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
       </header>
 
-      <main class="main-container main-index" data-test="main">
+      <main class="main-index" data-test="main">
         <section class="hero" data-test="hero">
           <h1 class="visually-hidden">Седона - город в Аризоне</h1>
-          <img class="hero-image" src="images/welcome.svg" width="458" height="352" lang="en"
-            alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" />
+          <img class="hero-image" src="images/welcome.svg" width="458" height="352" lang="en" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" />
         </section>
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
