--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
+            <li class="navigation-item navigation-user-item">
               <a class="navigation-link" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
-            <li class="navigation-item">
+            <li class="navigation-item navigation-user-item">
               <a class="navigation-link" href="#">
                 <span class="visually-hidden">Избранное</span>
                 <span class="navigation-badge">12</span>
               </a>
             </li>
-            <li class="navigation-item">
+            <li class="navigation-item navigation-user-item">
               <a class="navigation-link button button-primary nav-button" href="#">Хочу сюда!</a>
             </li>
           </ul>
@@ -90,7 +90,7 @@
         </section>
         <section class="service">
           <h2 class="visually-hidden">Услуги</h2>
-          <p class="service-promo">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+          <p class="service-promo">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</p>
           <p class="service-about">Опытный персонал и качественное обслуживание!</p>
           <ul class="service-list">
             <li class="service-item dark">
@@ -109,7 +109,7 @@
         </section>
         <section class="search" data-test="search">
           <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+          <p class="search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
             гостиниц в Седоне</p>
           <button class="button search-button" type="button">Поиск гостиницы в Седоне</button>
         </section>
