--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
               </a>
             </li>
             <li class="navigation-item navigation-user-item">
-              <a class="navigation-link navigation-user-link button button-primary nav-button" href="#">Хочу сюда!</a>
+              <a class="navigation-link navigation-user-link button button-primary nav-button" href="#" disabled>Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -107,8 +107,8 @@
               </p>
             </fieldset>
             <div class="form-filter-buttons">
-              <button class="form-filter-button button filter-button-apply" type="submit">Применить</button>
-              <button class="form-filter-button button filter-button-reset" type="reset">Сбросить</button>
+              <button class="form-filter-button button button-secondary filter-button-apply" type="submit">Применить</button>
+              <button class="form-filter-button button button-transparent filter-button-reset" type="reset">Сбросить</button>
             </div>
           </form>
         </div>
@@ -147,7 +147,7 @@
               <p class="card-type">Гостиница</p>
               <p class="card-price">От 4000 ₽</p>
               <a class="button button-primary card-details" href="#">Подробнее</a>
-              <button class="button card-fav" type="button">В избранное</button>
+              <button class="button button-secondary card-fav" type="button">В избранное</button>
               <p class="card-stars card-stars-four">
                 <span class="visually-hidden">4 звезды из 5</span>
               </p>
@@ -163,7 +163,7 @@
               <p class="card-type">Гостиница</p>
               <p class="card-price">От 5000 ₽</p>
               <a class="button button-primary card-details" href="#">Подробнее</a>
-              <button class="button card-fav fav-added" type="button">В избранном</button>
+              <button class="button button-secondary button-selected" type="button">В избранном</button>
               <p class="card-stars card-stars-four">
                 <span class="visually-hidden">4 звезды из 5</span>
               </p>
@@ -179,7 +179,7 @@
               <p class="card-type">Гостиница</p>
               <p class="card-price">От 2500 ₽</p>
               <a class="button button-primary card-details" href="#">Подробнее</a>
-              <button class="button card-fav" type="button">В избранное</button>
+              <button class="button button-secondary card-fav" type="button">В избранное</button>
               <p class="card-stars card-stars-three">
                 <span class="visually-hidden">3 звезды из 5</span>
               </p>
@@ -195,7 +195,7 @@
               <p class="card-type">Гостиница</p>
               <p class="card-price">От 1500 ₽</p>
               <a class="button button-primary card-details" href="#">Подробнее</a>
-              <button class="button card-fav" type="button">В избранное</button>
+              <button class="button button-secondary card-fav" type="button">В избранное</button>
               <p class="card-stars card-stars-two">
                 <span class="visually-hidden">2 звезды из 5</span>
               </p>
@@ -229,7 +229,7 @@
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="subscribe-control visually-hidden" for="subscribe-email">Введите Ваш e-mail для подписки</label>
             <input class="subscribe-input" type="email" id="subscribe-email" name="subscribe-email" placeholder="Ваш e-mail" required />
-            <button class="button subscribe-button" type="submit">Подписаться</button>
+            <button class="button button-secondary subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
