--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h2 class="search-title">Заинтересовались?</h2>
           <p class="search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
             гостиниц в Седоне</p>
-          <button class="button search-button" type="button">Поиск гостиницы в Седоне</button>
+          <button class="button button-primary search-button" type="button">Поиск гостиницы в Седоне</button>
         </section>
         <section class="subscribe subscribe-illustrative" data-test="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
@@ -119,7 +119,7 @@
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="subscribe-control visually-hidden" for="subscribe-email">Введите Ваш e-mail для подписки</label>
             <input class="subscribe-input" type="email" id="subscribe-email" name="subscribe-email" placeholder="Ваш e-mail" required />
-            <button class="button subscribe-button" type="submit">Подписаться</button>
+            <button class="button button-secondary subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
