--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon.png">
+    <script src="scripts/app.js" defer></script>
   </head>
 
   <body>
@@ -54,7 +57,7 @@
           <p class="advantages-lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
-            <li class="advantages-item imaged">
+            <li class="advantages-item advantages-item-imaged">
               <div class="advantages-text">
                 <h3 class="advantages-text-title">Настоящий городок</h3>
                 <p class="advantages-text-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -67,7 +70,7 @@
                 <p class="advantages-text-description">Все достопримечательности находятся очень близко</p>
               </div>
             </li>
-            <li class="advantages-item special">
+            <li class="advantages-item">
               <div class="advantages-text">
                 <h3 class="advantages-text-title">Красивая дорога</h3>
                 <p class="advantages-text-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
@@ -79,7 +82,7 @@
                 <p class="advantages-text-description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
-            <li class="advantages-item advantages-item-reversed imaged">
+            <li class="advantages-item advantages-item-reversed advantages-item-imaged">
               <div class="advantages-text">
                 <h3 class="advantages-text-title">Там есть мост дьявола</h3>
                 <p class="advantages-text-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -109,16 +112,15 @@
         </section>
         <section class="search" data-test="search">
           <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
-            гостиниц в Седоне</p>
+          <p class="search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button class="button button-primary search-button" type="button">Поиск гостиницы в Седоне</button>
         </section>
         <section class="subscribe subscribe-illustrative" data-test="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="subscribe-control visually-hidden" for="subscribe-email">Введите Ваш e-mail для подписки</label>
-            <input class="subscribe-input" type="email" id="subscribe-email" name="subscribe-email" placeholder="Ваш e-mail" required />
+            <label class="subscribe-control" for="subscribe-email">Ваш e-mail</label>
+            <input class="subscribe-input" type="email" id="subscribe-email" name="subscribe-email" placeholder="example@domain.com" required />
             <button class="button button-secondary subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
@@ -155,6 +157,60 @@
           <span class="visually-hidden">Сайт HTML Academy</span>
         </a>
       </footer>
+      <!-- Модальное окно -->
+      <div class="modal-container modal-container-closed">
+        <div class="modal modal-search">
+          <button class="modal-close-button" type="button">
+            <span class="visually-hidden">Закрыть модальное окно</span>
+          </button>
+          <section class="modal-content">
+            <h2 class="modal-heading">Поиск гостиницы в Седоне</h2>
+            <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+              <fieldset class="search-form-group">
+                <label class="search-form-label" for="">Дата заезда:</label>
+                <input class="search-form-input" type="text" id="date-from" name="date-from" value="27 апреля 2020" placeholder="27 апреля 2025" required>
+                <span class="search-form-message search-form-message-error">Мы не можем отправить вас в прошлое.</span>
+              </fieldset>
+              <fieldset class="search-form-group">
+                <label class="search-form-label" for="">Дата выезда:</label>
+                <input class="search-form-input" type="text" id="date-to" name="date-to" value="1 сентября 2023" placeholder="1 сентября 2025" required>
+                <span class="search-form-message">На эти даты есть свободные номера. Пока есть.</span>
+              </fieldset>
+              <div class="search-form-group-half">
+                <label class="search-form-label" for="adults">Взрослые:</label>
+                <div class="search-form-step step">
+                  <button class="step-button step-button-minus" type="button">
+                    <span class="visually-hidden">Уменьшить количество взрослых мест</span>
+                  </button>
+                  <input class="step-input" type="number" id="adults" name="adults" min="1" max="99" value="2" placeholder="2">
+                  <button class="step-button step-button-plus" type="button">
+                    <span class="visually-hidden">Увеличить количество взрослых мест</span>
+                  </button>
+                </div>
+              </div>
+              <div class="search-form-group-half">
+                <label class="search-form-label" for="kids">Дети:</label>
+                <span class="search-form-tooltip tooltip">
+                  <button class="tooltip-button" type="button" aria-labelledby="tooltip-label-kids">
+                    <span class="visually-hidden">Показать дополнительную информацию</span>
+                  </button>
+                  <span class="tooltip-text" id="tooltip-label-kids" role="tooltip">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                </span>
+                <div class="search-form-step step">
+                  <button class="step-button step-button-minus" type="button">
+                    <span class="visually-hidden">Уменьшить количество детских мест</span>
+                  </button>
+                  <input class="step-input" type="number" id="kids" name="kids" min="1" max="99" value="2" placeholder="2">
+                  <button class="step-button step-button-plus" type="button">
+                    <span class="visually-hidden">Увеличить количество детских мест</span>
+                  </button>
+                </div>
+              </div>
+              <button class="search-form-button button button-secondary" type="submit">Найти</button>
+            </form>
+          </section>
+        </div>
+      </div>
     </div>
   </body>
 
